force-app/main/default/objects/Shipment/fields/Base_Shipping_Price__c.field-meta.xml
<CustomField>
    <fullName>Base_Shipping_Price__c</fullName>
    <label>Base Shipping Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>