force-app/main/default/objects/Shipment/fields/Shipment_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Shipment_External_ID__c</fullName>
    <label>Shipment External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>