force-app/main/default/objects/Shipment/fields/Shipment_Method_Display__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Method_Display__c</fullName>
    <label>Shipment Method Display</label>
    <length>100</length>
    <type>Text</type>
</CustomField>