force-app/main/default/objects/Shipment/fields/Shipping_Cost_Final__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Cost_Final__c</fullName>
    <label>Shipping Cost Final</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>