force-app/main/default/objects/Shipment/fields/Shipping_Method_Code__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Method_Code__c</fullName>
    <label>Shipping Method Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>